remove getter support