@@ -7,8 +7,6 @@ import com.palantir.javapoet.ParameterSpec;
 import com.palantir.javapoet.ParameterizedTypeName;
 import com.palantir.javapoet.TypeName;
 import com.palantir.javapoet.TypeVariableName;
-
-import javax.lang.model.element.Modifier;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -19,12 +17,12 @@ import java.util.function.BinaryOperator;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collector;
+import javax.lang.model.element.Modifier;
 
 import static java.lang.Character.isLowerCase;
 import static java.lang.Character.isUpperCase;
 import static java.lang.Character.toLowerCase;
 import static java.lang.Character.toUpperCase;
-import static java.util.stream.Collectors.toList;
 
 public final class ZeroUtil {
 
@@ -70,7 +68,7 @@ public final class ZeroUtil {
   }
 
   public static <X, E> List<E> transform(Collection<? extends X> input, Function<X, E> function) {
-    return input.stream().map(function).collect(toList());
+    return input.stream().map(function).toList();
   }
 
   public static Collector<CodeBlock, List<CodeBlock>, CodeBlock> joinCodeBlocks() {
